Idea 1: start with a list then stagger relative/absolute positioning

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>Apiary WIP</header>
+  <nav>
+    <ul>
+      <li>Who We Are</li>
+      <li>What We Do</li>
+      <li>Links for Learning</li>
+      <li>Contact Us</li>
+    </ul>
+  </nav>
+
+  <footer>Copywrite | Apiary | 2019</footer>
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
