Idea 2: stagger paragraphs.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
 
   <!-- Add your site or application content here -->
   <header>Apiary WIP</header>
-  <nav>
-    <ul>
-      <li>Who We Are</li>
-      <li>What We Do</li>
-      <li>Links for Learning</li>
-      <li>Contact Us</li>
-    </ul>
-  </nav>
+  <p id="who">Who We Are</p>
+  <p id="what">What We Do</p>
+  <p id="links">Links for Learning</p>
+  <p id="contact">Contact</p>
 
   <footer>Copywrite | Apiary | 2019</footer>
 
