--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- Add your site or application content here -->
   <header>Apiary WIP</header>
+  <img></img>
   <p id="who">Who We Are</p>
   <p id="what">What We Do</p>
   <p id="links">Links for Learning</p>
