Minor changes and adding more shit.

--- a/what/index.html
+++ b/what/index.html
@@ -19,19 +19,14 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 
-<body>
-  <!--[if lte IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+    <div = "what">
+      <p>We provide customized solutions to all of your web development needs. We want to
+bring industry-grade practices together with extreme passion and a distinctively
+human approach to solve your web presence woes. Apiary has experience working
+with a variety of CMS (WordPress, Squarespace, etc.), languages and modern frameworks to tackle any challenge; from a website update or simple static landing page, to an eye-catching blog, all the way to full-featured web applications. So drop us a line and let your web worries become a thing of the past!
+      </p>
+    </div>
 
-  <!-- Add your site or application content here -->
-  <header>Apiary WIP</header>
-  <img></img>
-  <!--these will need to be a href within the images of honeycomb-->
-  <p id="who">Who We Are</p>
-  <p id="what">What We Do</p>
-  <p id="links">Links for Learning</p>
-  <p id="contact">Contact</p>
 
   <footer>Copywrite | Apiary | 2019</footer>
 
