Adding indexes to folders.

--- a/ben/index.html
+++ b/ben/index.html
@@ -19,14 +19,23 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 
-<!-- putting these here for now because I'm not 100%
-about where they're going to go. Probably our bios and who
-so elizabeth div and benjamin div on that page and who div on this about page.
-What we do will be a different page. Will copy/paste later.  -->
-
   <body>
-    <div id="who">
-      <p>Apiary Development is Elizabeth Sass and Benjamin Miller. We are two developers with a passion for bringing your vision to the web with a caring and human approach. Whatever your need is, we guarantee your web project will go from a pain point to a pride point with our top-notch, professional approach to engineering your solution.</p>
+    <div id="benjamin">
+      <p>Benjamin Miller is a software engineer with over six years of professional
+experience working on full-stack web applications for companies both large and small.
+He brings a passion for engineering efficient and beautiful applications
+to Apiary, and is excited to help you achieve your goals! Benjamin specializes in communication
+with customers, for a friendly and holistic approach to solving your problems. He
+strives to understand and deliver exactly what you're looking for, exactly like
+you want it.
+
+Benjamin is a transplant to Colorado Springs from North Carolina, where he spent
+his life up until 2016. It is then that he moved with his family to colorful
+Colorado to pursue a dream of living in the beautiful Rocky Mountains and furthering
+his and his family's interest in the outdoors. Benjamin is an avid video gamer,
+loves music of all varieties, enjoys social board games and RPGs with friends,
+and otherwise falls squarely and proudly into the category of "Turbonerd"™
+    </p>
     </div>
 
   <footer>Copywrite | Apiary | 2019</footer>
