--- a/beth/index.html
+++ b/beth/index.html
@@ -19,15 +19,13 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 
-<!-- putting these here for now because I'm not 100%
-about where they're going to go. Probably our bios and who
-so elizabeth div and benjamin div on that page and who div on this about page.
-What we do will be a different page. Will copy/paste later.  -->
 
   <body>
-    <div id="who">
-      <p>Apiary Development is Elizabeth Sass and Benjamin Miller. We are two developers with a passion for bringing your vision to the web with a caring and human approach. Whatever your need is, we guarantee your web project will go from a pain point to a pride point with our top-notch, professional approach to engineering your solution.</p>
+    <div id="elizabeth">
+      <p>Elizabeth Sass is a web designer who specializes in visual branding, user experience, and hand-coding websites. She has a keen eye for fluid layouts and easy-to-use development. You have a vision and idea for your corner of the internet, and she will make it just as beautiful as you expected! When not coding, Elizabeth enjoys riding horses, hiking, and volunteering with trail maintenance crews. She also loves D&D and vegan bacon. With a husband in the military, Elizabeth travels around the world. They currently reside in Colorado Springs with their cat, Maxwell.
+      </p>
     </div>
+
 
   <footer>Copywrite | Apiary | 2019</footer>
 
