General Learning Links

--- a/learning/generallearning/index.html
+++ b/learning/generallearning/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>General Learning</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,9 +19,16 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 <body>
-
-  <a href="">
-
+  <h1>General Learning Links</h1>
+  <p id="links">
+    <ul>
+      <li><a href="https://hackr.io/" alt="hackr.io">hackr.io</a> - A categorized list of resources for every language and framework imaginable. Users submit a resource and then it receives up or down votes based on its quality.</li>
+      <li><a href="https://stackoverflow.com/" alt="Stack Overflow">Stack Overflow</a> - A must-have for all developers. Users submit questions under a variety of categories and receive responses ordered by quality.</li>
+      <li><a href="https://www.udemy.com/" alt="Udemy">Udemy</a> (paid) - Buy professional-grade courses on any topic. There are often steep discounts available. If you can’t find it for free, it’s on Udemy for a reasonable price.</li>
+      <li><a href="https://developer.mozilla.org/en-US/" alt="MDN">MDN Web Docs</a> - A comprehensive documentation and tutorial site for web development, by Mozilla. These docs are infinitely more valuable and fleshed out than their W3 Schools counterparts.</li>
+    </ul>
+  </p>
+</body>
   <footer>Copywrite | Apiary | 2019</footer>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
