--- a/learning/javascript/index.html
+++ b/learning/javascript/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>General Learning</title>
+  <title>JavaScript Learning</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,14 +19,12 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 <body>
-  <h1>General Learning Links</h1>
+  <h1>JavaScript Learning</h1>
   <p id="links">
+    <h2>React</h2>
     <ul>
-      <li><a href="https://hackr.io/" alt="hackr.io">hackr.io</a> - A categorized list of resources for every language and framework imaginable. Users submit a resource and then it receives up or down votes based on its quality.</li>
-      <li><a href="https://stackoverflow.com/" alt="Stack Overflow">Stack Overflow</a> - A must-have for all developers. Users submit questions under a variety of categories and receive responses ordered by quality.</li>
-      <li><a href="https://www.udemy.com/" alt="Udemy">Udemy</a> (paid) - Buy professional-grade courses on any topic. There are often steep discounts available. If you can’t find it for free, it’s on Udemy for a reasonable price.</li>
-      <li><a href="https://developer.mozilla.org/en-US/" alt="MDN">MDN Web Docs</a> - A comprehensive documentation and tutorial site for web development, by Mozilla. These docs are infinitely more valuable and fleshed out than their W3 Schools counterparts.</li>
-    </ul>
+      <li><a href="https://reactjs.org/tutorial/tutorial.html" alt="ReactJS.org Tutorial">ReactJS.org Tutorial</a> - The definitive guide for learning Ruby on Rails with the newest Rails version. Teaches basics of web development and the Ruby language, test-driven development, and project maintenance as well.</li>
+      <li><a href="https://www.robinwieruch.de/learn-react-js/" alt="How to Learn React in 2019">How to Learn React in 2019</a> - Less a direct resource and more of a collection of resources with a guided path to learning React. Encourages fundamentals over learning the “latest and greatest” way to code React.</li>
   </p>
 </body>
   <footer>Copywrite | Apiary | 2019</footer>
