--- a/learning/rubyandrails/index.html
+++ b/learning/rubyandrails/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Apiary Development</title>
+  <title>Ruby & Ruby on Rails</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,35 +11,29 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
-
 <body>
-  <!--[if lte IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-  <!-- Add your site or application content here -->
-  <header></header>
-  <img></img>
-  <!--these will need to be a href within the images of honeycomb-->
-  <p id="who">Who We Are</p>
-  <p id="what">What We Do</p>
-  <p id="links">Links for Learning</p>
-  <p id="contact">Contact</p>
-
+  <h1>Ruby & Ruby on Rails</h1>
+  <p id="links">
+    <ul>
+      <li><a href="https://www.railstutorial.org/" alt="ReactJS.org Tutorial">Ruby on Rails Tutorial (Rails 5)</a> - The definitive guide for learning Ruby on Rails with the newest Rails version. Teaches basics of web development and the Ruby language, test-driven development, and project maintenance as well.</li>
+      <li><a href="http://rubykoans.com/" alt="How to Learn React in 2019">Ruby Koans</a> - An interesting and useful way to learn idiomatic Ruby with guided exercises.</li>
+      <li><a href="https://ruby.github.io/TryRuby/" alt="TryRuby">TryRuby</a> Learn Ruby in your browser!</li>
+  </p>
+</body>
   <footer>Copywrite | Apiary | 2019</footer>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../../js/plugins.js"></script>
+  <script src="../../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
