Beth pages, broke the CSS again.

--- a/learning/rubyandrails/index.html
+++ b/learning/rubyandrails/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="../../css/normalize.css">
@@ -24,7 +24,7 @@
     <ul>
       <li><a href="https://www.railstutorial.org/" alt="ReactJS.org Tutorial">Ruby on Rails Tutorial (Rails 5)</a> - The definitive guide for learning Ruby on Rails with the newest Rails version. Teaches basics of web development and the Ruby language, test-driven development, and project maintenance as well.</li>
       <li><a href="http://rubykoans.com/" alt="How to Learn React in 2019">Ruby Koans</a> - An interesting and useful way to learn idiomatic Ruby with guided exercises.</li>
-      <li><a href="https://ruby.github.io/TryRuby/" alt="TryRuby">TryRuby</a> Learn Ruby in your browser!</li>
+      <li><a href="https://ruby.github.io/TryRuby/" alt="TryRuby">TryRuby</a> - Learn Ruby in your browser!</li>
   </p>
 </body>
   <footer>Copywrite | Apiary | 2019</footer>
