Links and index files all over.

--- a/beth/reviews/index.html
+++ b/beth/reviews/index.html
@@ -3,31 +3,33 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Elizabeth Sass</title>
+  <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
+  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 
+  <h1>What People Are Saying</h1>
   <body>
-    <div id="beth">
-      <p>Elizabeth Sass is a web designer who specializes in visual branding, user experience, and hand-coding websites. She has a keen eye for fluid layouts and easy-to-use development. You have a vision and idea for your corner of the internet, and she will make it just as beautiful as you expected! When not coding, Elizabeth enjoys riding horses, hiking, and volunteering with trail maintenance crews. She also loves D&D and vegan bacon. With a husband in the military, Elizabeth travels around the world. They currently reside in Colorado Springs with their cat, Maxwell.
-    </p>
+    <div id="reviews">
+      <p>"Elizabeth was so knowledgeable and wonderful to work with! She completed our project well before our deadline!" Ashley, Camp Twin Lakes</p>
+      <p>"Elizabeth was friendly and helpful and came prepped with a list of great ideas and examples that helped illustrate her recommendations. In addition to actionable steps, she shared ideas about SEO, community partnerships, and other website-adjacent tips that added value. Elizabeth was also quick on her feet, thinking of ideas and options on the fly in response to my questions. We looked at sites together, compared options, and thought through some challenges. Partnership in action from the first moment. Thanks, Elizabeth! (Nonprofit pros: Don't miss a chance to work with her!)" Debra, IPPL</p>
     </div>
+
 
   <footer>Copywrite | Apiary | 2019</footer>
 
-  <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="../js/plugins.js"></script>
