CSS minor fixes.

--- a/what/index.html
+++ b/what/index.html
@@ -19,8 +19,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 
-    <div id="what">
-      <p>We provide customized solutions to all of your web development needs. We want to
+    <div id="what-paragraph">
+      <p >We provide customized solutions to all of your web development needs. We want to
 bring industry-grade practices together with extreme passion and a distinctively
 human approach to solve your web presence woes. Apiary has experience working
 with a variety of CMS (WordPress, Squarespace, etc.), languages and modern frameworks to tackle any challenge; from a website update or simple static landing page, to an eye-catching blog, all the way to full-featured web applications. So drop us a line and let your web worries become a thing of the past!
