--- a/beth/reviews/index.html
+++ b/beth/reviews/index.html
@@ -23,7 +23,7 @@
   <body>
     <div id="reviews">
       <p>"Elizabeth was so knowledgeable and wonderful to work with! She completed our project well before our deadline!" Ashley, Camp Twin Lakes</p>
-      <p>"Elizabeth was friendly and helpful and came prepped with a list of great ideas and examples that helped illustrate her recommendations. In addition to actionable steps, she shared ideas about SEO, community partnerships, and other website-adjacent tips that added value. Elizabeth was also quick on her feet, thinking of ideas and options on the fly in response to my questions. We looked at sites together, compared options, and thought through some challenges. Partnership in action from the first moment. Thanks, Elizabeth! (Nonprofit pros: Don't miss a chance to work with her!)" Debra, IPPL</p>
+      <p>"Elizabeth was friendly and helpful and came prepped with a list of great ideas and examples that helped illustrate her recommendations. <br>In addition to actionable steps, she shared ideas about SEO, community partnerships, and other website-adjacent tips that added value. Elizabeth was also quick on her feet, thinking of ideas and options on the fly in response to my questions. We looked at sites together, compared options, and thought through some challenges. Partnership in action from the first moment. Thanks, Elizabeth! (Nonprofit pros: Don't miss a chance to work with her!)" Debra, IPPL</p>
     </div>
 
 
