Working on links

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <header></header>
   <img></img>
   <!--these will need to be a href within the images of honeycomb-->
-  <p id="who">Who We Are</p>
-  <p id="what">What We Do</p>
-  <p id="links">Links for Learning</p>
-  <p id="contact">Contact</p>
+  <p id="who"><a href="about/index.html">Who We Are</a></p>
+  <p id="what"><a href="what/index.html">What We Do</a></p>
+  <p id="links"><a href="learning/index.html">Links for Learning</a></p>
+  <p id="contact"><a href="contact/index.html">Contact</a></p>
 
   <footer>Copywrite | Apiary | 2019</footer>
 
