--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
   <header></header>
   <img></img>
-  <!--these will need to be a href within the images of honeycomb-->
-  <p id="who"><a href="about/index.html">Who We Are</a></p>
-  <p id="what"><a href="what/index.html">What We Do</a></p>
-  <p id="links"><a href="learning/index.html">Links for Learning</a></p>
-  <p id="contact"><a href="contact/index.html">Contact</a></p>
+
+  <p id="who"><a href="../about/index.html">Who We Are</a></p>
+  <p id="what"><a href="../what/index.html">What We Do</a></p>
+  <p id="links"><a href="../learning/index.html">Links for Learning</a></p>
+  <p id="contact"><a href="../contact/index.html">Contact</a></p>
 
   <footer>Copywrite | Apiary | 2019</footer>
 
