--- a/learning/index.html
+++ b/learning/index.html
@@ -3,38 +3,42 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Apiary Development</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
+  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 
-    <div id="what-paragraph">
-      <p>We provide customized solutions to all of your web development needs. We want to
-bring industry-grade practices together with extreme passion and a distinctively
-human approach to solve your web presence woes. Apiary has experience working
-with a variety of CMS (WordPress, Squarespace, etc.), languages and modern frameworks to tackle any challenge; from a website update or simple static landing page, to an eye-catching blog, all the way to full-featured web applications. So drop us a line and let your web worries become a thing of the past!
-      </p>
-    </div>
+<body>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
 
+  <header></header>
+  <img></img>
+
+  <p id="who"><a href="generallearning/index.html">Genearl Learning</a></p>
+  <p id="what"><a href="javascript/index.html">JavaScript</a></p>
+  <p id="links"><a href="rubyandrails/index.html">Ruby and Ruby on Rails</a></p>
+  <p id="contact"><a href="java/index.html">Java</a></p>
 
   <footer>Copywrite | Apiary | 2019</footer>
 
-  <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
