Links in the about page.

--- a/about/index.html
+++ b/about/index.html
@@ -29,6 +29,11 @@ What we do will be a different page. Will copy/paste later.  -->
       <p>Apiary Development is Elizabeth Sass and Benjamin Miller. We are two developers with a passion for bringing your vision to the web with a caring and human approach. Whatever your need is, we guarantee your web project will go from a pain point to a pride point with our top-notch, professional approach to engineering your solution.</p>
     </div>
 
+    <p id="beth"><a href="../beth/index.html">Elizabeth Sass: Designer<a></p>
+      <!--twitter here-->
+    <p id="ben"><a href="../ben/index.html">Benjamin Miller: Developer<a></p>
+
+
   <footer>Copywrite | Apiary | 2019</footer>
 
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
