--- a/about/index.html
+++ b/about/index.html
@@ -30,10 +30,9 @@ What we do will be a different page. Will copy/paste later.  -->
     </div>
 
     <p id="beth"><a href="../beth/index.html">Elizabeth Sass: Designer<a></p>
-      <a class="twitter-timeline" href="https://twitter.com/pontiferous?ref_src=twsrc%5Etfw">Tweets by pontiferous</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a class="twitter-timeline" data-width="350" data-height="350" href="https://twitter.com/pontiferous?ref_src=twsrc%5Etfw">Tweets by pontiferous</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <p id="ben"><a href="../ben/index.html">Benjamin Miller: Developer<a></p>
-      <a class="twitter-timeline" href="https://twitter.com/benjamincodes?ref_src=twsrc%5Etfw">Tweets by benjamincodes</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+      <a class="twitter-timeline" data-width="350" data-height="350" href="https://twitter.com/BenjaminCodes?ref_src=twsrc%5Etfw">Tweets by BenjaminCodes</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <footer>Copywrite | Apiary | 2019</footer>
 
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
