--- a/beth/index.html
+++ b/beth/index.html
@@ -21,9 +21,15 @@
 
   <body>
     <div id="beth">
-      <p>Elizabeth Sass is a web designer who specializes in visual branding, user experience, and hand-coding websites. She has a keen eye for fluid layouts and easy-to-use development. You have a vision and idea for your corner of the internet, and she will make it just as beautiful as you expected! When not coding, Elizabeth enjoys riding horses, hiking, and volunteering with trail maintenance crews. She also loves D&D and vegan bacon. With a husband in the military, Elizabeth travels around the world. They currently reside in Colorado Springs with their cat, Maxwell.
-    </p>
+      <p>Elizabeth Sass is a web designer who specializes in visual branding, user experience, and hand-coding websites.
+        She has a keen eye for fluid layouts and easy-to-use development. You have a vision and idea for your corner of the internet,
+        and she will make it just as beautiful as you expected! When not coding, Elizabeth enjoys riding horses, hiking, and volunteering
+        with trail maintenance crews. She also loves D&D and vegan bacon. With a husband in the military, Elizabeth travels around the world.
+         They currently reside in Colorado Springs, CO, USA with their cat, Maxwell.</p>
+      <p>Don't need an entire overhaul? Elizabeth is also available for visual design audits and website audits.</p>
     </div>
+    <a href="portfolio/index.html">Portfolio</a>
+    <a href="reviews/index.html">Revews</a>
 
   <footer>Copywrite | Apiary | 2019</footer>
 
