--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,10 @@ What we do will be a different page. Will copy/paste later.  -->
 
   <body>
     <div id="who">
-      <p>Apiary Development is Elizabeth Sass and Benjamin Miller. We are two developers with a passion for bringing your vision to the web with a caring and human approach. Whatever your need is, we guarantee your web project will go from a pain point to a pride point with our top-notch, professional approach to engineering your solution.</p>
+      <p>Apiary Development is Elizabeth Sass and Benjamin Miller.
+        We are two developers with a passion for bringing your vision to the web with a caring and human approach.
+        Whatever your need is, we guarantee your web project will go from a pain point to a pride point with our top-notch,
+        professional approach to engineering your solution.</p>
     </div>
 
     <p id="beth"><a href="../beth/index.html">Elizabeth Sass: Designer<a></p>
